Fix z-index ordering

--- a/resources/css/app.scss
+++ b/resources/css/app.scss
@@ -35,6 +35,7 @@
         color: #fff;
         width: 100%;
         font-size: 0.85rem;
+        z-index: 2;
 
         & a {
             color: #fff;
